name:                nonempty-aeson
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.18
description:         aeson instances for 'NonEmpty'
Homepage:            http://github.com/blackheaven/nonempty/nonempty-aeson

library
  default-language:   Haskell2010
  build-depends:
        base == 4.*
      , aeson == 2.*
      , nonempty >= 0.1.0.0 && < 1
  hs-source-dirs: src
  exposed-modules:
      Data.Aeson.Types.Instances.NonEmpty
  other-modules:
      Paths_nonempty_aeson
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedLists
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -Werror

test-suite nonempty-aeson-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Data.Aeson.Types.Instances.NonEmptySpec
      Paths_nonempty_aeson
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedLists
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -Werror
  build-depends:
      base
    , nonempty
    , nonempty-aeson
    , aeson
    , containers >= 0.5 && < 1
    , hspec
    , hspec-core
    , hspec-discover
  default-language: Haskell2010
