name:                nonempty-quickcheck
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.18
description:         QuickCheck instance for 'NonEmpty'
Homepage:            http://github.com/blackheaven/nonempty/nonempty-quickcheck

library
  default-language:   Haskell2010
  build-depends:
        base == 4.*
      , QuickCheck == 2.*
      , nonempty >= 0.1.0.0 && < 1
  hs-source-dirs: src
  exposed-modules:
      Test.QuickCheck.Instances.NonEmpty
  other-modules:
      Paths_nonempty_quickcheck
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedLists
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -Werror
