name:                nonempty-text
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.18
description:         'NonEmpty' wrappers for text
Homepage:            http://github.com/blackheaven/nonempty/nonempty-text

library
  default-language:   Haskell2010
  build-depends:
        base == 4.*
      , text >=1 && < 3
      , bytestring == 0.11.*
      , nonempty >= 0.1.0.0 && < 1
  hs-source-dirs: src
  exposed-modules:
      Data.Text.NonEmpty
      Data.Text.Encoding.NonEmpty
      Data.Text.Lazy.NonEmpty
  other-modules:
      Paths_nonempty_text
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedLists
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -Werror
