cabal-version:       3.0
name:                nonempty-wrapper-text
version:             0.1.1.0
extra-doc-files:
    README.md
    changelog.md
author:              Gautier DI FOLCO
maintainer:          foss@difolco.dev
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            'NonEmpty' wrappers for text
description:         'NonEmpty' wrappers for text.
Homepage:            http://github.com/blackheaven/nonempty-wrapper/nonempty-wrapper-text
tested-with:         GHC==9.12.1, GHC==9.10.2, GHC==9.8.4, GHC==9.6.7, GHC==9.4.8, GHC==9.2.8

library
  default-language:   Haskell2010
  build-depends:
        base == 4.*
      , text == 2.*
      , bytestring >= 0.10 && < 0.13
      , nonempty-wrapper >= 0.1.0.0 && < 1
  hs-source-dirs: src
  exposed-modules:
      Data.Text.NonEmpty
      Data.Text.Encoding.NonEmpty
      Data.Text.Lazy.NonEmpty
  other-modules:
      Paths_nonempty_wrapper_text
  autogen-modules:
      Paths_nonempty_wrapper_text
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedLists
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
