cabal-version:       3.0
name:                nonempty-wrapper
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            Create NonEmpty version of any container
description:         Create NonEmpty version of any container.
Homepage:            http://github.com/blackheaven/nonempty-wrapper/nonempty-wrapper
tested-with:         GHC==9.12.3, GHC==9.10.2, GHC==9.8.4, GHC==9.6.7, GHC==9.4.8, GHC==9.2.8

library
  default-language:   Haskell2010
  build-depends:
        base == 4.*
      , template-haskell == 2.*
  hs-source-dirs: src
  exposed-modules:
      Data.NonEmpty
      Data.NonEmpty.QQ
      Data.NonEmpty.TH
  other-modules:
      Paths_nonempty_wrapper
  autogen-modules:
      Paths_nonempty_wrapper
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedLists
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite nonempty-wrapper-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Data.NonEmptySpec
      Paths_nonempty_wrapper
  autogen-modules:
      Paths_nonempty_wrapper
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedLists
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , nonempty-wrapper
    , hspec
    , hspec-core
    , hspec-discover
  default-language: Haskell2010
